--- a/src/main/resources/htdocs/css/main.css
+++ b/src/main/resources/htdocs/css/main.css
@@ -1,5 +1,5 @@
 /*!
- * Copyright Â© 2017-2017 Elton Santos Vianna. Distributed under GNU General Public License v3.0.
+ * Copyright © 2017-2017 Elton Santos Vianna. Distributed under GNU General Public License v3.0.
  */
 @charset "utf-8";
 
